# VoyageAI-Backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/agents/: __init__.py  attraction_agent.py  budget_agent.py  destination_agent.py  food_agent.py  hotel_agent.py  itinerary_agent.py  transport_agent.py  weather_agent.py
app/api/: health.py  travel.py
app/config/: settings.py
app/graph/: nodes.py  response_formatter.py  router.py  state.py  test_streaming_graph.py  test_travel_graph.py  workflow.py
app/rag/: rag_chain.py  rag_ingestion.py  retriever.py  vector_store.py
app/schemas/: travel_schema.py
app/tools/: attraction_tool.py  destination_tool.py  food_tool.py  hotel_tool.py  image_tool.py  itinerary_tool.py  transport_tool.py  weather_tool.py
app/utils/: __init__.py  destination_utils.py  json_utils.py  llm_config.py  path_utils.py
notebooks/: 01_rag_ingestion.ipynb  02_retrieval_testing.ipynb  03_rag_pipeline_demo.ipynb
notebooks/agents/: 01_destination_agent.ipynb  02_hotel_agent.ipynb  03_food_agent.ipynb  04_transport_agent.ipynb  05_weather_agent.ipynb  06_budget_agent.ipynb  07_itinerary_agent.ipynb
